cds/DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: cds
spec:
  selector:
    app: cds
  replicas: 1
  template:
    metadata:
      labels:
        app: cds
    spec:
      containers:
        - name: cds
          image: image-registry.openshift-image-registry.svc:5000/cds/cds:1.0
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/demo"
              name: "pvol" 
          ports:
            - containerPort: 8080
      volumes:
        - name: "pvol"
          persistentVolumeClaim: 
            claimName: pvc-cds-data-vol
  triggers:
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        from:
          kind: "ImageStreamTag"
          name: "cds:1.0"
        containerNames:
          - "cds"
