cds/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: cds
spec:
  selector:
    app: cds
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
