cds/Route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cds
spec:
  path: /
  to:
    kind: Service
    name: cds
    weight: 100
  port:
    targetPort: 8080
